fixed cards on safari

--- a/templates/css/index.css
+++ b/templates/css/index.css
@@ -480,7 +480,6 @@ footer {
           flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
